--- a/arabeproject/app/Templates/app/base.html
+++ b/arabeproject/app/Templates/app/base.html
@@ -4,16 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 		<meta charset="UTF-8" />
-		<title>LC Arabe</title>
+		<title>L. C. Arabe Realty</title>
         <link rel="icon" href="{% static 'IMAGES/favicon1.ico' %}" type="image/ico">
         <link rel="stylesheet" href={% static 'CSS/base.css' %}>
         
 	</head>
 
 	<body>
-                <header>
-                    <div class="bg">
-                        
+                <header>    
                     <div class="navbar">
                         <img class="Logo" src= "{% static 'IMAGES/Logo1.png' %}" > 
                     <ul>
@@ -22,11 +20,10 @@
                         <li><a href="{% url 'contact' %}">Contact</a></li>
                         
                     </ul>
-
-                    
                     <ul>
                         <li><a class="login-btn" href="{% url 'login' %}">Login</a></li>
                     </ul>
+                    
                         </div>
                 </header>
 
