--- a/arabeproject/app/Templates/app/contact.html
+++ b/arabeproject/app/Templates/app/contact.html
@@ -6,8 +6,7 @@
 		<img class="banner" src= "{% static 'IMAGES/Background.jpg' %}" > 
 		<div class= "content">
 			<h1> CONTACT US </h1>
-			
-			<form>
+			<form class = "container-contact">
 				<label for="first-name">First Name:</label>
 				<input type="text" id="first-name" name="first-name" placeholder="first name" required>
 	
@@ -22,7 +21,6 @@
 	
 				<button type="submit">Submit</button>
 			</form>
-
 		</div>
 </div>
 {% endblock content%}
