--- a/arabeproject/app/Templates/app/register.html
+++ b/arabeproject/app/Templates/app/register.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
+<h3>Register</h3>
 <div class="form-container">
-<h2>Register</h2>
 <form >
     <label for="reg_username">Username:</label>
     <input type="text" id="reg_username" name="username" required>
@@ -19,4 +19,5 @@
 
     <button type="submit">Sign Up</button>
 </form>
+</div>
 {% endblock content %}
