--- a/arabeproject/app/Templates/app/login.html
+++ b/arabeproject/app/Templates/app/login.html
@@ -15,6 +15,8 @@
         <input type="password" id="password" name="password"placeholder="password" required>
 
         <button type="submit">Login</button>
+        
+        <a class = "A" href="{% url 'register' %}">register</a>
     </form>
 </div>
 
