--- a/arabeproject/static/CSS/base.css
+++ b/arabeproject/static/CSS/base.css
@@ -3,26 +3,34 @@ body {
   margin: 0;
   font-family: sans-serif; 
   overflow-x: hidden;
+
+}
+
+.form-container, .container-contact {
+  display: flex;
+  justify-content: center; 
+  align-content: center;  
+  height: 100%;           
   width: 100%;
 }
 
-.form-container, form {
+form {
   width: 100%;
   max-width: 500px;
+  padding: 20px;
   border-radius: 5%;
+  background-color:#000000;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  overflow-x: hidden;
+  align-items: center; 
+  align-content: center;
 }
 
 .banner {
   position: relative;             
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
   background-position: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('static/IMAGES/Background.jpg.jpg');
@@ -43,6 +51,7 @@ body {
   width: 100%;
   position: absolute;
   top: 50%;
+  align-items: center;   
   transform: translateY(-50%);
   text-align: center;
   color: #fff;
@@ -156,8 +165,8 @@ button {
   background-color: #4CAF50;
   color: white;
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  border-radius: 8px;
+  
 }
 
 button:hover {
@@ -172,15 +181,22 @@ label {
 
 .login-btn {
   background-color: rgb(13, 109, 34);
-  padding: 10px 20px; 
+  padding: 8px 18px; 
   border: none; 
   border-radius: 4px; 
 }
 
 .login-btn:hover {
-  background-color: rgb(255, 255, 255); 
+  background-color: rgb(0, 0, 0); 
 }
 
+.A {
+  margin-top: 10px;
+  padding: 10px 15px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
 footer {
   color: #fff;
   padding: 20px ;
@@ -229,8 +245,8 @@ footer {
 }
 
 .picture, .picture1, .picture2 {
-  max-width: 100%;
-  height: auto;
+  max-width: 85%;
+  height: 85%;
   object-fit: cover;
   border: 2px solid #ccc;
   border-radius: 10px;
@@ -248,7 +264,3 @@ footer {
   }
 }
 
-@font-face{
-  font-family: "Customfont";
-  src: url("arabeproject/static/customfont/blooming-elegant-sans.ttf");
-}
