--- a/arabeproject/app/Templates/app/login.html
+++ b/arabeproject/app/Templates/app/login.html
@@ -16,7 +16,7 @@
 
         <button type="submit">Login</button>
         
-        <a class = "A" href="{% url 'register' %}">register</a>
+        <a class = "A" href="{% url 'register' %}">Register</a>
     </form>
 </div>
 
