--- a/arabeproject/static/CSS/base.css
+++ b/arabeproject/static/CSS/base.css
@@ -1,9 +1,13 @@
-body {
-  background-color: #3B7A4E; 
+body{
+  background-image:url(Background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-blend-mode: darken;
   margin: 0;
   font-family: sans-serif; 
   overflow-x: hidden;
-
 }
 
 .form-container, .container-contact {
@@ -187,7 +191,7 @@ label {
 }
 
 .login-btn:hover {
-  background-color: rgb(0, 0, 0); 
+  background-color: #45a049;; 
 }
 
 .A {
@@ -241,14 +245,30 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 1%;
 }
 
-.picture, .picture1, .picture2 {
+.picture  {
   max-width: 85%;
-  height: 85%;
+  height: auto;
   object-fit: cover;
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+.picture1 {
+  max-width: 150%;
+  height: 60%;
+  object-fit: cover;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+.picture2{
+  max-width: 90%;
+  height: auto;
+  object-fit: cover;
+  border: 1px solid #ccc;
   border-radius: 10px;
 }
 
